Minor improvements to Man page